--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
       
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2021 Copyright:
-          <a class="text-white" href="">Jatumongkon Suksrinuan</a>
+          © 2021: UNCLEPON ONLINE CO., LTD
         </div>
         <!-- Copyright -->
     </footer>
