--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                             </ul>
                         </li>
                         <li class="nav-item me-2 my-2">
-                            <button class="btn btn-outline-success " type="submit">LOGIN</button>
+                            <a href="index.html" class="btn btn-outline-success">LOGIN</a>
                         </li>
                         <li class="nav-item media my-2">
-                            <button class="btn btn-outline-success" type="submit">OPEN ACCOUNT</button>
+                            <a href="regis.html" class="btn btn-outline-success">OPEN ACCOUNT</a>
                         </li>
                     </ul>
                     
