--- a/react/Cryptocurrency project/project/public/index.html
+++ b/react/Cryptocurrency project/project/public/index.html
@@ -20,6 +20,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@700&display=swap" rel="stylesheet">
 
+  <!-- บูสเต็บ -->
+  <link rel="stylesheet" href="@icon/bootstrap-icons/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://unpkg.com/@icon/bootstrap-icons/bootstrap-icons.css">
+
   <title>React App</title>
 </head>
 
